--- a/podconfig.yaml
+++ b/podconfig.yaml
@@ -13,10 +13,12 @@ spec:
     - containerPort: 80
     env:
     - name: color.good
-      valueFrom:
+     valueFrom:
             configMapKeyRef:
               name: expensevalues
+              key: color.good
     - name: color.bad
        valueFrom:
             configMapKeyRef:
               name: expensevalues
+              key: color.bad
